# dockerlens

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  docker.rs  lib.rs  settings.rs
src/components/: Dashboard.tsx  ImageList.tsx  SettingsPanel.tsx  StorageBar.tsx  TrayHeader.tsx
src/hooks/: useDockerImages.ts
