[package]
name = "dockerlens"
version = "0.1.0"
edition = "2021"

[lib]
name = "dockerlens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dockerlens"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
hyperlocal = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
